tests/e2e/app_prop_type_check.story
a = 124
a = app.secrets.foobar
